# abyssal-twin

./: .env.example  .gitignore  .releaserc.json  ARCHITECTURE.md  CITATION.cff  CI_CD_VERIFICATION_GUIDE.md  COMMERCIALIZATION_SUMMARY.md  COMPETITIVE_DEVOPS_SUMMARY.md  DASHBOARD_VALUE_PROPOSITION.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION.md  DISCOVERY_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAP_FIX_PLAN.md  MIGRATION_NOTES.md  Makefile  NOTICE  PRE_DEPLOYMENT_REPORT.md  READINESS_PLAN.md  README.md  README_COMMERCIAL.md  SECURITY.md  SRE_DEPLOYMENT_REPORT.md  STRUCTURE_REPORT.md  SUSTAINABILITY.md  SYSTEM_STATUS.md  UX_IMPLEMENTATION_SUMMARY.md  UX_RESEARCH_PLAN.md  pyproject.toml  tsconfig.base.json
.claude/: settings.local.json
.cursor/: ABYSSAL_CONTEXT_ONEPAGER.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  rq_failure.yml  security.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/security-remediate/: action.yml
.github/actions/setup-monorepo/: action.yml
.github/workflows/: ci-competitive.yml  ci-master.yml  ci.yml  cloudflare-pages.yml  deploy-dashboard.yml  deploy.yml  github-pages.yml  pages.yml  provenance.yml  rq-validation.yml  security-orchestration.yml
cloudflare/: .tsbuildinfo  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
cloudflare/migrations/: 0001_initial.sql  0002_indexes.sql  seed.sql
cloudflare/pages/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
cloudflare/pages/src/: App.tsx  index.css
cloudflare/pages/src/components/: AnomalyPanel.tsx  FleetMap.tsx  MetricsChart.tsx  StatusCards.tsx
cloudflare/pages/src/hooks/: useFleetSSE.ts
cloudflare/pages/src/lib/: api.ts
cloudflare/public/: dashboard.html
cloudflare/src/: crdt.ts  federation-coordinator.ts  index.ts  merkle.ts  simulation-engine.ts  sync.ts  types.ts  vector-clock.ts
cloudflare/src/middleware/: auth.ts  data-residency.ts  metrics.ts
cloudflare/src/routes/: anomalies.ts  fleet.ts  ingest.ts  metrics-export.ts  missions.ts
cloudflare/src/types/: brands.ts
cloudflare/src/utils/: match.ts
cloudflare/test/: api.test.ts  crdt.test.ts  env.d.ts  sync.test.ts  vector-clock.test.ts
configs/security/: governance.xml.template
docker/: docker-compose.simulation.yml
docker/federation/: Dockerfile
docker/observability/: prometheus.yml
docker/observability/grafana/dashboards/: provider.yml
docker/observability/grafana/datasources/: prometheus.yml
docker/ros2/: Dockerfile
docker/ros2_workspace/: Dockerfile
docker/stonefish/: Dockerfile
docker/zenoh/: acoustic.json5
docs/: OPTIMIZATION_PLAN.md  PROMPTING_CONTEXT.md  README.md  SIMULATION_LIMITATIONS.md  quickstart.md
docs/ci-cd/: README.md
docs/deployment/: cloudflare-pages.md  github-pages-setup.md
docs/screenshots/: dashboard-overview.html  index.html  research-metrics.html
docs/security/: threat_model.md
edge-gateway/: Cargo.toml  config.toml
edge-gateway/src/: bandwidth_monitor.rs  cloudflare_client.rs  local_cache.rs  main.rs  sync_engine.rs  zenoh_bridge.rs
edge-gateway/systemd/: abyssal-gateway.service  cloudflared.service  zenoh-router.service
edge-gateway/tunnel/: config.yml
experiments/rq1_sync_tradeoff/: run.py
mission-control/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.toml
mission-control/.github/workflows/: deploy-pages.yml
mission-control/public/: _headers  _redirects
mission-control/src/: App.tsx  demo-data.ts  env.d.ts  index.css  main.ts  main.tsx  types.ts
mission-control/src/components/: GlobalFleetMap.tsx  MissionReplay.tsx
mission-control/src/components/effects/: ParticleField.tsx
mission-control/src/components/ui/: AnimatedAlert.tsx  AnimatedCard.tsx  AssetCard.tsx  TelemetryGauge.tsx
mission-control/src/lib/: animations.ts
mission-control/src/services/: SafetyEngine.ts
scripts/: deployment-monitor.sh  setup-cloudflare.sh  simulate-dashboard.sh  test-e2e.sh  validate-infrastructure.sh
scripts/attacks/: replay_attack.py
scripts/ci/: generate_certs.sh
src/iort_dt_anomaly/iort_dt_anomaly/: detectors.py
src/iort_dt_compression/iort_dt_compression/: models.py  rate_controller.py
src/iort_dt_federation/: Cargo.toml
src/iort_dt_federation/src/: lib.rs  main.rs
src/iort_dt_msgs/: CMakeLists.txt  package.xml
src/iort_dt_msgs/msg/: AUVState.msg  AnomalyAlert.msg  FleetState.msg
stonefish/: Dockerfile
tests/property/: test_rq1_bounds.py  test_rq3_arl.py
