[package]
name = "abyssal-edge-gateway"
version = "1.0.0"
edition = "2021"
description = "Support vessel edge gateway for Abyssal Twin — bridges AUV fleet to Cloudflare edge"
license = "Apache-2.0"
authors = ["Swanand Tanavade <s.tanavade@unomaha.edu>"]
repository = "https://github.com/kakashi3lite/abyssal-twin"

[[bin]]
name = "abyssal-gateway"
path = "src/main.rs"

[dependencies]
# Federation core crate (VectorClock, FederatedDTState, GossipMessage)
iort-dt-federation = { path = "../src/iort_dt_federation" }

# Zenoh: matches existing federation crate (src/iort_dt_federation)
zenoh = { version = "1.0", features = ["default"] }

# HTTP client for Cloudflare Workers API (R2 uploads, REST ingest)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }

# WebSocket client for real-time sync with Durable Object
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Local SQLite cache (mirrors D1 schema for trivial delta sync)
rusqlite = { version = "0.31", features = ["bundled"] }

# Compression for satellite uplink (on top of RQ1's 47-byte format)
zstd = "0.13"

# Serialization (same bincode as federation crate — zero translation layer)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration (TOML file for vessel deployment)
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (certificate validation, data signing)
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Cross-compilation targets for vessel hardware
# Build with: cargo build --release --target x86_64-unknown-linux-gnu
# Or for Jetson Orin: cargo build --release --target aarch64-unknown-linux-gnu
